# kegotool

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  app.rc  main.cpp  main.qml  projectconf.h  qml.qrc
deploy/linux/: deploy.sh
deploy/linux/template/: KegoTool.sh
deploy/linux/template/DEBIAN/: control  postinst  prerm
deploy/windows/: deploy.py
deploy/windows/template/config/: config.xml
deploy/windows/template/meta/: installscript.qs  license.txt  package.xml
qml/components/: ByteDelegate.qml  ByteInfoLine.qml  CommandLine.qml  ExpandPanel.qml  KHeader.qml  KLabel.qml  KPane.qml  KPopupPane.qml  ScriptDelegate.qml  ScriptLogDelegate.qml
qml/pages/: About.qml  Crc.qml  Settings.qml  Uart.qml
qml/popups/: BytesInfoPopup.qml  DictionaryPopup.qml  HistoryPopup.qml  PopupView.qml  ScriptAddPopup.qml  ScriptLogWindow.qml  UartInfoPopup.qml
qml/widgets/client/: BytesOutput.qml  ClientRxParameters.qml  ClientTxParameters.qml  Scripts.qml  UartPort.qml  UartSettings.qml
qml/widgets/crc/: ChecksumData.qml  CrcSettings.qml  CrcView.qml  FieldChecksumItem.qml  FileChecksumItem.qml  FileCompareStatus.qml  FileCompareView.qml  HashSettings.qml  HashView.qml
qml/widgets/settings/: ConfigGeneralSettings.qml
resources/icons/: KegoTool.desktop  default.desktop
resources/other/crc/: crc16.json  crc32.json  crc64.json  crc8.json
resources/other/scripts/examples/: example1.js  example2.js
resources/other/scripts/template/: template.js
resources/styles/Dark/: qtquickcontrols2.conf  style.json
resources/styles/Light/: qtquickcontrols2.conf  style.json
src/cpp/checksum/: CMakeLists.txt  crccalc.cpp  crccalc.h  crcengine.cpp  crcengine.h  hashcalc.cpp  hashcalc.h  qmlenvcreator.cpp  qmlenvcreator.h  test_crccalc.cpp  test_crccalc.h  test_hashcalc.cpp  test_hashcalc.h
src/cpp/client/: CMakeLists.txt  bytetablemodel.cpp  bytetablemodel.h  commandmodel.cpp  commandmodel.h  commandstorage.cpp  commandstorage.h  iclient.h  qmlenvcreator.cpp  qmlenvcreator.h  serialclient.cpp  serialclient.h  test_bytetablemodel.cpp  test_bytetablemodel.h
src/cpp/script/: CMakeLists.txt  qmlenvcreator.cpp  qmlenvcreator.h  scriptengine.cpp  scriptengine.h  scriptexecutor.cpp  scriptexecutor.h  scriptfilemodel.cpp  scriptfilemodel.h  scriptlogmodel.cpp  scriptlogmodel.h
src/cpp/stor/: CMakeLists.txt  appstyle.cpp  appstyle.h  configjsondbstorage.cpp  configjsondbstorage.h  fileloader.cpp  fileloader.h  jdatabase.cpp  jdatabase.h
src/cpp/util/: CMakeLists.txt  byteutils.cpp  byteutils.h  fsutils.cpp  fsutils.h  testclass.cpp  testclass.h  unsortedmap.h
tests/: CMakeLists.txt  main.cpp
tools/: license  license_checker.py
